# thesis-rp-migration

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  A1_SETUP.md  CITATION.cff  LICENSE  LICENSE-DATA  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
code/chain_b_cmip6/: b0_cds_smoke_test.py  b0b_catchment_tier1.py  b0b_era5_basinmean.py  b1_acquisition_rest.py  b1_diag_rest.py  b1_smoke_test.py  b1_smoke_test_v2.py  b1_verify_files.py
code/chain_b_cmip6/wget_scripts/: wget_ACCESS-CM2_historical.sh  wget_ACCESS-CM2_ssp245.sh  wget_ACCESS-CM2_ssp585.sh  wget_GFDL-ESM4_historical.sh  wget_GFDL-ESM4_ssp245.sh  wget_GFDL-ESM4_ssp585.sh  wget_MPI-ESM1-2-HR_historical.sh  wget_MPI-ESM1-2-HR_ssp245.sh  wget_MPI-ESM1-2-HR_ssp585.sh
code/utils/: __init__.py  logging_config.py  paths.py  verify_a1.py
docs/: A1_CLOSURE_2026-05-27.md  B0b_CATCHMENT_TIER_DECISION.md  B0b_ERA5_CDS_ACQUISITION_LOG.md  B0b_catchment_tier1_summary.json  B1_ESGF_CMIP6_ACQUISITION_LOG.md  B1_acquisition_manifest_2026-05-29T033341Z.json  B1_diag_rest_2026-05-29T031322Z.json  B1_esgf_probe_2026-05-29T025017Z.json  B1_esgf_probe_v2_2026-05-29T030144Z.json  B1_esgf_probe_v2_2026-05-29T032708Z.json  CHECK_6C_CLOSURE_2026-05-30.md  UG_Thesis-v1-locked-edit-3.txt  UG_Thesis_UPDATE_LOG_2026-05-29.md  UG_Thesis_UPDATE_LOG_2026-05-30.md  Ug_thesis-v1-locked-edit-2.txt  deviation_log.md  ffwc_bulletin_inventory.md  ffwc_bulletin_inventory_v2.1.md  ug_thesis_update_log_2026-05-27.md
docs/chapters/: appendix_a_scripts.md  appendix_b_deviation_log.md  appendix_c_holdout_validation.md  appendix_d_glofas_bwdb.md  ch1_intro.md  ch2_literature.md  ch3_study_area.md  ch4_data.md  ch5_methodology.md  ch6_results.md  ch7_discussion.md  ch8_conclusions.md
results/baseline/: A2_phase_alpha_audit.md  A2_phase_alpha_per_year_summary.csv
scripts/: fetch_ffwc_afrs.sh
tests/: test_verify_a1.py
