[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-rp-migration"
version = "0.2.0"
description = "Satellite-Constrained RP-Migration of Flood Hazard at Bahadurabad under CMIP6"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["code"]
include = ["chain_a_satellite*", "chain_b_cmip6*", "chain_d_ffa*", "chain_e_uq*", "utils*"]
